@@ -11,9 +11,10 @@ PYVERS := $(shell pyversions --requested -v debian/control) $(shell py3versions 
 FLAVOURS := $(PYVERS) $(patsubst %,%-dbg,$(PYVERS))
 
 TESTSUITE_FAIL_CMD=exit 1
+NON_FATAL=( echo "*** test-suite FAILED but continuing anyway ***"; true; )
 ifneq ($(filter $(DEB_BUILD_ARCH), ),)
 # tests currently fail on these architectures
-    TESTSUITE_FAIL_CMD=( echo "*** test-suite FAILED but continuing anyway ***"; true; )
+    TESTSUITE_FAIL_CMD=$(NON_FATAL)
 endif
 
 configure_flags += \
@@ -39,8 +40,10 @@ override_dh_auto_build:
 # root's session D-BUS
 override_dh_auto_test:
 	set -e; export HOME=$(CURDIR)/debian/tmp/home; mkdir -p $$HOME/.local/share; unset LD_PRELOAD; \
-	for x in $(FLAVOURS); do \
+	for x in $(PYVERS); do \
 	        xvfb-run dh_auto_test --builddirectory=build-$$x || $(TESTSUITE_FAIL_CMD); \
+	        while [ -e /tmp/.X99-lock ]; do echo "Waiting for xvfb to finish..."; sleep 0.5; done; \
+	        xvfb-run dh_auto_test --builddirectory=build-$$x-dbg || $(NON_FATAL); \
 	        while [ -e /tmp/.X99-lock ]; do echo "Waiting for xvfb to finish..."; sleep 0.5; done; \
 	done;
 
